<resources>
    <string name="app_name">SignUpForm</string>
    <string name="signUp_title">Sign Up Form</string>
    <string name="username_str">Username</string>
    <string name="email_str">Email</string>
    <string name="password_str">Password</string>
    <string name="passwordConf_str">Password Confirm</string>
    <string name="signUpSave_str">Save</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcomeMessage">Welcome, Jane Dough, to the SignUpForm App</string>
</resources>
